# mod_coortime

./: CMakeLists.txt  Makefile  Programm.cpp  Programm.hpp  README.md  UBXparser.hpp  arm-none-eabi.cmake  basegps.hpp  buildforkhadas.lua  gpsdgps.cpp  gpsdgps.hpp  main.cpp  mod_coortime.make  mod_photo.make  uartgps.cpp  uartgps.hpp
crossbuildKhadas/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  my_mod_coortime
